<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_marginBottom="8dp"
        android:background="@drawable/iconkpsszede" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Kpss"
            android:id="@+id/textView2"
            android:layout_marginBottom="15dp"
            android:textColor="#3493f2"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Zede"
            android:id="@+id/textView6"
            android:layout_marginBottom="15dp"
            android:textColor="@color/bg_buttonlar"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#e6ebff"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:windowSoftInputMode="stateHidden"
        android:textColor="#040204"
        android:textColorHint="@color/input_login_hint"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#e6ebff"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:windowSoftInputMode="stateHidden"
        android:textColor="#040203"
        android:textColorHint="@color/input_login_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_buttonlar"
        android:text="@string/btn_login"
        android:textColor="#010100"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#FFFFFF"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="#010101"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp" />
        <Button
            android:id="@+id/btnLinkToForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="Şifremi Unuttum"
            android:textAllCaps="false"
            android:textColor="#010101"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp" />



    </LinearLayout>

</LinearLayout>

