<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/svScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    android:background="#ffffff"
    android:focusable="false"
    android:fillViewport="false">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.2">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/imgView"
                android:layout_marginTop="5dp"
                android:src="@drawable/userphoto"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/imgUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/user_add"
                android:text="@string/lblProfilresmisec"
                android:textAllCaps="false"
                android:textColor="#010101"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Ad            :"
                    android:id="@+id/textView3"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#e6ebff"
                    android:hint="@string/hint_name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:windowSoftInputMode="stateHidden"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Soyad      :"
                    android:id="@+id/textView5"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/sname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#e6ebff"
                    android:hint="@string/hint_sname"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:windowSoftInputMode="stateHidden"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="E-Posta   :"
                    android:id="@+id/textView7"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#e6ebff"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:windowSoftInputMode="stateHidden"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Şifre        :"
                    android:id="@+id/textView8"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="#e6ebff"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:windowSoftInputMode="stateHidden"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

        </LinearLayout>


        <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:background="@color/bg_buttonlar"
        android:text="@string/btn_register"
        android:textColor="#040203"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
            android:layout_weight="0.15" />

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="#010101"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_weight="0.15" />
    </LinearLayout>

</ScrollView>
